[package]
name = "vban_emitter"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "vban_emitter"
path = "src/main.rs"

[[bin]]
name = "vban_sine"
path = "src/sine_test.rs"

[[bin]]
name = "debug_audio"
path = "src/debug_audio.rs"

[dependencies]
wasapi = "0.16"
clap = { version = "4", features = ["derive"] }
windows = { version = "0.59", features = ["Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console", "Win32_System_DataExchange", "Win32_System_Memory"] }
tray-icon = "0.19"
muda = "0.15"
winit = "0.30"
ctrlc = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
